portflio website navbar menu complete

--- a/Portfolio Website/src/vars.css
+++ b/Portfolio Website/src/vars.css
@@ -4,7 +4,7 @@
     --color-primary: #576cbc;
     --color-secondary: #1937cd;
     --color-dark: #333;
-    --color-bg: #000;
+    --color-bg: #04152d;
 
     /* Portfolio Fonts */
     --foot-roboto: "Roboto";
