--- a/Portfolio Website/src/components/Navbar/Navbar.module.css
+++ b/Portfolio Website/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,8 @@
     align-items: center;
     justify-content: space-between;
     padding-top: 61px;
-    margin: 0 10%
+    margin: 0 10%;
+    z-index: 2;
 }
 .logo a{
     font-family: "Outfit";
@@ -33,4 +34,43 @@
     text-align: left;
     text-decoration: none; 
     color: var(--color-text)  
+}
+
+@media screen and (max-width: 830px) {
+    .navBar{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .menu{
+        position: absolute;
+        right: 0;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-right: 10%;
+        gap: 11px;
+        z-index: 3;
+    }
+    .menuBar{
+        display: block;
+        cursor: pointer;
+    }
+    .menuItems{
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        gap: 13px;
+        padding: 24px 34px;
+        border-radius: 10px;
+        background: linear-gradient(rgba(25, 55, 109, 0.2) 0%, #19376D 100%);
+        box-shadow: 0px 4px 4px 0px #00000040;
+        color: #FFFFFF;
+    }
+    .menu img{
+        width: 30px;
+        height: 30px;
+    }
+    .menuOpen{
+        display: flex;
+        z-index: 1;
+    }
 }
