--- a/Portfolio Website/src/index.css
+++ b/Portfolio Website/src/index.css
@@ -1,3 +1,4 @@
+@import "https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap";
 *{
     box-sizing: border-box;
     margin: 0px;
